--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+  <body onload="checkCookie()">
     <div class="container-fluid px-0">
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-light shadow">
