--- a/index.html
+++ b/index.html
@@ -347,12 +347,10 @@ Mentored by 3 experts as part of Infosys Inspire program.
       setInterval(fetchJoke, 60000);
   </script>
 
-
+<br>
   
+<a href="https://info.flagcounter.com/S8Zj"><img src="https://s11.flagcounter.com/count2/S8Zj/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 
-    <div>
-      <a href="https://info.flagcounter.com/2t4x"><img src="https://s11.flagcounter.com/count2/2t4x/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
-    </div>
 
     <!-- Footer -->
     <footer class="text-center py-4">
