--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ Mentored by 3 experts as part of Infosys Inspire program.
 
 <br>
   
-<a href="https://info.flagcounter.com/S8Zj"><img src="https://s11.flagcounter.com/count2/S8Zj/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZMHL24KLR"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-CZMHL24KLR'); </script>
 
 
     <!-- Footer -->
