--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZMHL24KLR"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-CZMHL24KLR'); </script>
-  <body onload="checkCookie()">
+  <body>
     <div class="container-fluid px-0">
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-light shadow">
